# crules

./: .cursorrules  .gitignore  CHANGELOG.md  LICENSE  README.md  README_ARCHITECT.md  crules.txt  cursor.bash  cursor.lua  cursor.perl  cursorrules  instructions.txt  project_spec.md  pyproject.toml  python  requirements.txt  summary.txt  terminal
.crules/modes/: CODER.md  MANAGER.md
lang_rules/: cursor.bash  cursor.java  cursor.lua  cursor.perl  cursor.python  java  javascript
src/crules/: __init__.py  __main__.py  ai_managers.py  cli.py  config.py  cursor_ops.py  file_ops.py
src/crules/rules/: __init__.py  cursor.javascript  cursor.python  cursorrules  default_cursorrules  tools.py
src/crules/rules/workflows/: BOOTSTRAPPER.md  CODER.md  GIT_POLICY.md  MANAGER.md
tests/: test_ai_managers.py  test_cursor_ops.py
